--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,271 +1,179 @@
-* {
-  box-sizing: border-box;
+.title {
+  color: #02ccba;
 }
-
-body {
-  margin: 0;
-  font-family: "Hiragino Kaku Gothic ProN";
-}
-
-a {
-  text-decoration: none;
-}
-
-.container {
-  width: 100%;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
-.top-wrapper {
-  padding: 180px 0 100px 0;
-  background-image: url(top.png);
-  background-size: cover;
-  color: white;
-  text-align: center;
-}
-
-.top-wrapper h1 {
-  opacity: 0.7;
-  font-size: 45px;
-  letter-spacing: 5px;
-}
-
-.top-wrapper p {
-  opacity: 0.7;
-  font-size: 16px;
-  margin-bottom: 40px;
-}
-
-.btn-wrapper {
-  text-align: center;
-}
-
-.btn-wrapper p {
-  margin-bottom: 20px;
-}
-
-.signup {
-  background-color: #239b76;
-}
-
-.facebook {
-  background-color: #3b5998;
-  margin-right: 10px;
-}
-
-.twitter {
-  background-color: #55acee;
-}
-
-.btn {
-  padding: 8px 24px;
-  color: white;
-  display: inline-block;
-  opacity: 0.8;
-  border-radius: 4px;
-  text-align: center;
-}
-
-.btn:hover {
-  opacity: 1;
-}
-
-.fa {
-  margin-right: 5px;
-}
-
 header {
   height: 65px;
   width: 100%;
-  background-color: rgba(34,49,52,0.9);
-  position :fixed;
+  background-color: white	;
+  padding: 10px 0 ;
+  position: fixed;
   top: 0;
   z-index: 10;
 }
 
+
 .logo {
-  width: 124px;
-  margin-top: 20px;
-}
-
-.header-left {
   float: left;
+  padding-right: 10px;
 }
 
-.header-right {
-  float: right;
-  margin-right: -25px;
+.header-title {
+  font-size: 30px;
+  font-family: メイリオ;
+  letter-spacing: 4px;
 }
 
-.header-right a {
-  line-height: 65px;
-  padding: 0 25px;
+.header-subtitle {
+  font-size: 15px;
+  font-family: メイリオ;
+  letter-spacing: 2px;
+  line-height: 0.8;
+}
+
+/*  Top 写真  */
+
+.top-wrapper {
+  background-image:url("media/picture/IMG_御神殿（明るい）.JPG");
+  padding: 400px 0 400px 0;
+  margin-top: 60px;
+  background-size: cover;
   color: white;
-  display: block;
-  float: left;
-  transition: all 0.5s;
+  text-align: center;
+  opacity: 0.8;
+  text-shadow: 4px 4px 10px silver;
 }
 
-.header-right a:hover {
-  background-color: rgba(255,255,255,0.3);
+.heading {
+  margin-bottom:0px ;
 }
 
-.lesson-wrapper {
-  height: 580px;
-  padding-bottom: 80px;
+/*  教会ってどんなとこ  */
+
+.middle-wrapper {
+  padding-top: 30px;
+  padding-bottom: 500px;
   padding-left: 5%;
   padding-right: 5%;
   background-color: #f7f7f7;
   text-align: center;
 }
 
+.middle-wrapper p {
+font-family: メイリオ;
+text-align: center;:
+}
+
 .heading {
-  padding-top: 80px;
-  padding-bottom: 50px;
-  color: #5f5d60;
+  font-size: 25px;
 }
 
-.heading h2 {
-  font-weight: normal;
-}
-
-.lesson {
+.whattodo {
   float: left;
-  width: 25%;
+  max-width: 33%;
+  text-align: center;
+  line-height: 0.8;
 }
 
-.lesson-icon {
+.whattodo-picture {
   position: relative;
+  margin: 30px 30px;
+  filter: drop-shadow( 0 0 10px gray);
 }
 
-.lesson-icon p {
+.whattodo-picture p {
   position: absolute;
-  top: 37%;
+  top: 44%;
   width: 100%;
+  text-align: center;
   color: white;
+  font-size: 20px;
+  text-shadow: 1px 2px 8px silver;
 }
 
-.text-contents {
-  width: 80%;
-  display: inline-block;
-  margin-top: 15px;
-  font-size: 13px;
-  color: #b3aeb5;
+.section-title {
+  font-size: 20px;
 }
 
-.heading h3 {
-  font-weight: normal;
-}
+/*  掲示板　今月のことば  */
 
-.message-wrapper {
-  border-bottom: 1px solid #eee;
-  padding-bottom: 80px;
+.mioshie {
   text-align: center;
 }
 
-.message {
-  padding: 15px 40px;
-  background-color: #5dca88;
-  cursor: pointer;
-  box-shadow: 0px 7px #1a7940;
+.mioshie p {
+  font-size: 25px;
 }
 
-.message:active {
-  position: relative;
-  top: 7px;
-  box-shadow: none;
+.mioshie-intro p {
+  font-size: 17px;
+  margin: 7px 7px;
+  line-height: 1.4;
 }
 
-footer img {
-  width: 125px;
+
+
+/*  Top 問い合わせ  */
+
+
+.contact-form {
+  width: 800px;
+  margin-left: 500px;
 }
 
-footer p {
-  color: #b3aeb5;
-  font-size: 12px;
+.item{
+  overflow: hidden;
+  margin-bottom: 10px;
 }
+
+
+
+.inputs{
+  display: inline-block;
+  width:300px;
+}
+
+.gender {
+ float: left;
+}
+
+input[type="text"],input[type="email"]{
+  border: solid 1px #aaa;
+  border-radius:5px;
+  padding:10px;
+  font-size: 15px;
+}
+
+textarea{
+  display: inline-block;
+  border: solid 1px #aaa;
+  border-radius:5px;
+  height: 100px;
+  font-size: 15px;
+  vertical-align: top;
+  padding: 10px;
+}
+
+.btn-area{
+margin-left: 280px;
+
+}
+
+/*  住所  */
 
 footer {
-  padding-top: 30px;
-  padding-bottom: 20px;
+  background-color: #FFFAFA;
+  clear:left;
+  font-family: メイリオ;
+  margin: 40px 20px;
+  line-height: 0.7;
 }
 
-.menu-icon {
-  color: white;
+
+
+.konkokyo-himeji {
+  float: left
+}
+
+.konkokyo-honbu {
   float: right;
-  font-size: 25px;
-  padding: 21px 0;
-  display: none;
-}
-
-.clear {
-  clear: left;
-}
-
-@media all and (max-width: 1000px) {
-  .lesson {
-    width: 50%;
-    margin-bottom: 50px;
-  }
-
-  .lesson-wrapper {
-    height: 990px;
-  }
-
-  footer {
-    text-align: center;
-  }
-}
-
-@media all and (max-width: 750px) {
-  .top-wrapper h1 {
-    font-size: 32px;
-  }
-
-  .heading h2 {
-    font-size: 20px;
-  }
-}
-
-@media all and (max-width: 670px) {
-  .header-right {
-    display: none;
-  }
-
-  .menu-icon {
-    display: block;
-  }
-
-  .top-wrapper .btn {
-    width: 100%;
-  }
-
-  .twitter {
-    margin-top: 10px;
-  }
-
-  .top-wrapper {
-    text-align: left;
-  }
-
-  .top-wrapper h1 {
-    font-size: 24px;
-  }
-
-  .top-wrapper p {
-    font-size: 14px;
-  }
-
-  .lesson {
-    width: 100%;
-  }
-
-  .lesson-wrapper {
-    height: 1700px;
-  }
-
-  .message-wrapper .btn {
-    width: 100%;
-  }
 }
