--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@ header {
 /*  Top 写真  */
 
 .top-wrapper {
-  background-image:url("media/picture/IMG_御神殿（明るい）.JPG");
+  background-image:url("IMG_御神殿（明るい）.JPG");
   padding: 400px 0 400px 0;
   margin-top: 60px;
   background-size: cover;
