--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@ header {
 /*  Top 写真  */
 
 .top-wrapper {
-  background-image:url("IMG_御神殿（明るい）.JPG");
+  background-image:url("https://github.com/konkokyo-himeji/moto/blob/master/IMG_%E5%BE%A1%E7%A5%9E%E6%AE%BF%EF%BC%88%E6%98%8E%E3%82%8B%E3%81%84%EF%BC%89.JPG?raw=true");
   padding: 400px 0 400px 0;
   margin-top: 60px;
   background-size: cover;
