--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,44 +1,182 @@
-@media (max-width: 670px) {
-  .top-wrapper {
-  width: 1300px;
-  background-image: url(media/picture/IMG_御神殿（明るい）.JPG);
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-  }
+.title {
+  color: #02ccba;
+}
+header {
+  height: 65px;
+  width: 100%;
+  background-color: white	;
+  padding: 10px 0 ;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+}
 
-  .middle-wrapper {
-  width: 1300px;
-  }
 
-  .under-wrapper {
-  width: 1300px;
-  }
+.logo {
+  float: left;
+  padding-right: 10px;
+}
+
+.header-title {
+  font-size: 30px;
+  font-family: メイリオ;
+  letter-spacing: 4px;
+}
+
+.header-subtitle {
+  font-size: 15px;
+  font-family: メイリオ;
+  letter-spacing: 2px;
+  line-height: 0.8;
+}
+
+/*  Top 写真  */
+
+.top-wrapper {
+  background-image:url("media/picture/IMG_御神殿（明るい）.JPG");
+  padding: 400px 0 400px 0;
+  margin-top: 60px;
+  background-size: cover;
+  color: white;
+  text-align: center;
+  opacity: 0.8;
+  text-shadow: 4px 4px 10px silver;
+
+}
+
+
+
+
+.heading {
+  margin-bottom:0px ;
+}
+
+/*  教会ってどんなとこ  */
+
+.middle-wrapper {
+  padding-top: 30px;
+  padding-bottom: 500px;
+  background-color: #f7f7f7;
+  text-align: center;
+}
+
+.middle-wrapper p {
+font-family: メイリオ;
+text-align: center;:
+}
+
+.heading {
+  font-size: 25px;
+}
+
+.whattodo {
+  float: left;
+   width: 33%;
+}
+
+.whattodo-picture {
+  position: relative;
+  filter: drop-shadow( 0 0 10px gray);
+}
+
+.whattodo-picture p {
+  position: absolute;
+  top: 44%;
+  width: 100%;
+  text-align: center;
+  color: white;
+  font-size: 20px;
+  text-shadow: 1px 2px 8px silver;
+}
+
+.section-title {
+  font-size: 20px;
+}
+
+/*  掲示板　今月のことば  */
+
+.mioshie {
+  text-align: center;
+}
+
+.mioshie p {
+  font-size: 25px;
+}
+
+.mioshie-intro p {
+  font-size: 17px;
+  margin: 7px 7px;
+  line-height: 1.4;
+}
+
+
+
+/*  Top 問い合わせ  */
+
+
+.contact-form {
+  width: 800px;
+  margin-left: 500px;
+}
+
+.item{
+  overflow: hidden;
+  margin-bottom: 10px;
+}
+
+
+
+.inputs{
+  display: inline-block;
+  width:300px;
+}
+
+.gender {
+ float: left;
+}
+
+input[type="text"],input[type="email"]{
+  border: solid 1px #aaa;
+  border-radius:5px;
+  padding:10px;
+  font-size: 15px;
+}
+
+textarea{
+  display: inline-block;
+  border: solid 1px #aaa;
+  border-radius:5px;
+  height: 100px;
+  font-size: 15px;
+  vertical-align: top;
+  padding: 10px;
+}
+
+.btn-area{
+margin-left: 280px;
+
+}
+
+/*  住所  */
 
 footer {
-  width: 1300px;
-}
+  background-color: #FFE4E1;
+  clear:left;
+  font-family: メイリオ;
+  line-height: 0.7;
 
 }
 
-@media (max-width: 1000px) {
-  .top-wrapper {
-  width: 1300px;
-  background-image: url(media/picture/IMG_御神殿（明るい）.JPG);
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-  }
-
-  .middle-wrapper {
-  width: 1300px;
-  }
-
-  .under-wrapper {
-  width: 1300px;
-  }
-
-  footer {
-  width: 1300px;
+.info {
+  height: 80px;
+  width: 0 auto;
+  margin: 20px 20px;
 }
 
+.konkokyo-himeji {
+  float: left
+}
 
+.konkokyo-honbu {
+  float: right;
 }
