--- a/responsive.css
+++ b/responsive.css
@@ -1,8 +1,6 @@
 @media (max-width: 670px) {
   .top-wrapper {
-
   width: 1300px;
-
   background-image: url(media/picture/IMG_御神殿（明るい）.JPG);
   background-repeat: no-repeat;
   background-size: 100% auto;
@@ -11,9 +9,36 @@
   .middle-wrapper {
   width: 1300px;
   }
-.under-wrapper {
-  width: 1300px;
 
+  .under-wrapper {
+  width: 1300px;
   }
+
+footer {
+  width: 1300px;
+}
+
+}
+
+@media (max-width: 1000px) {
+  .top-wrapper {
+  width: 1300px;
+  background-image: url(media/picture/IMG_御神殿（明るい）.JPG);
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  }
+
+  .middle-wrapper {
+  width: 1300px;
+  }
+
+  .under-wrapper {
+  width: 1300px;
+  }
+
+  footer {
+  width: 1300px;
+}
+
 
 }
