--- a/stylesheet.css
+++ b/stylesheet.css
@@ -111,6 +111,11 @@ text-align: center;:
 
 
 
+.past-keijiban p {
+  font-size: 17px;
+  margin: 7px 7px;
+  line-height: 1.4;
+}
 /*  Top 問い合わせ  */
 
 
