--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@ header {
   height: 65px;
   width: 100%;
   background-color: white	;
-  padding: 10px 0 ;
+  padding: 5px 0 ;
   position: fixed;
   top: 0;
   z-index: 10;
@@ -18,16 +18,19 @@ header {
 }
 
 .header-title {
-  font-size: 30px;
+  font-size: 12px;
   font-family: メイリオ;
   letter-spacing: 4px;
 }
 
-.header-subtitle {
-  font-size: 15px;
+.header-title h1 {
+  margin: 0 0;
   font-family: メイリオ;
-  letter-spacing: 2px;
-  line-height: 0.8;
+}
+
+.header-title h2 {
+  margin: 0 0;
+  font-family: メイリオ;
 }
 
 /*  Top 写真  */
